--- a/SmarthStore/Views/Products/Index.cshtml
+++ b/SmarthStore/Views/Products/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<Product>
 @{
+    int pageIndex = (int)ViewData["PageIndex"]!;
+    int totalPages = (int)ViewData["TotalPages"]!;
 }
 
 <h2 class="text-center mb-5">List of Products</h2>
@@ -45,3 +47,14 @@
         }
     </tbody>
 </table>
+
+<nav>
+    <ul class="pagination">
+        @for (int i = 1; i < totalPages; i++)
+        {
+            string active = "";
+            if (i == pageIndex) active = "active";
+            <li class="page-item @active"><a class="page-link" asp-route-pageIndex="@i">@i</a></li>
+        }
+    </ul>
+</nav>
