--- a/SmarthStore/Views/Products/Index.cshtml
+++ b/SmarthStore/Views/Products/Index.cshtml
@@ -2,13 +2,22 @@
 @{
     int pageIndex = (int)ViewData["PageIndex"]!;
     int totalPages = (int)ViewData["TotalPages"]!;
+
+    string search = (string)ViewData["Search"]!;
 }
 
 <h2 class="text-center mb-5">List of Products</h2>
 
+
 <div class="row mb-5">
     <div class="col">
         <a class="btn btn-primary" asp-controller="Products" asp-action="Create">New Product</a>
+    </div>
+    <div class="col">
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" name="search" value="@search" placeholder="Search by Name or Brand" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
     </div>
 </div>
 
@@ -54,7 +63,8 @@
         {
             string active = "";
             if (i == pageIndex) active = "active";
-            <li class="page-item @active"><a class="page-link" asp-route-pageIndex="@i">@i</a></li>
+            <li class="page-item @active"><a class="page-link" asp-route-pageIndex="@i"
+            asp-route-search="@search">@i</a></li>
         }
     </ul>
 </nav>
