--- a/SmartStore/Views/Home/Index.cshtml
+++ b/SmartStore/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
                             Brand: @product.Brand, Category: @product.Category
                         </p>
                         <h4 class="mb-3">@(product.Price)$</h4>
-                        <a class="btn btn-primary btn-sm mb-2" href="" role="button">Details</a>
+                        <a class="btn btn-primary btn-sm mb-2" asp-controller="Store" asp-action="Details" asp-route-id="@product.Id" role="button">Details</a>
                         <button type="button" class="btn btn-warning btn-sm mb-2">
                             Add to cart <i class="bg-info bi-cart4"></i>
                         </button>
