--- a/SmartStore/Views/_ViewImports.cshtml
+++ b/SmartStore/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using SmarthStore
-@using SmarthStore.Models
+﻿@using SmartStore
+@using SmartStore.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
