Request Password Reset Link

--- a/SmartStore/Views/Account/Login.cshtml
+++ b/SmartStore/Views/Account/Login.cshtml
@@ -16,30 +16,28 @@
         }
 
         <form method="post">
-            <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Email</label>
-                <div class="col-sm-8">
-                    <input class="form-control" asp-for="Email">
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
+            <div class="mb-3">
+                <label class="form-label">Email</label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Password</label>
-                <div class="col-sm-8">
-                    <input class="form-control" type="password" asp-for="Password">
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
+
+            <div class="mb-3">
+                <label class="form-label">Password</label>
+                <input asp-for="Password" type="password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
+
             <div class="form-check mb-3">
-                <input class="form-check-input" type="checkbox" asp-for="RememberMe">
+                <input class="form-check-input" type="checkbox" asp-for="RememberMe" />
                 <label class="form-check-label">Remember Me</label>
             </div>
 
             <div class="row mb-3">
-                <div class="offset-sm-4 col-sm-4 d-grid">
-                    <button type="submit" class="btn btn-primary">Login</button>
+                <div class="col d-grid">
+                    <button type="submit" class="btn btn-primary">Log in</button>
                 </div>
-                <div class="col-sm-4 d-grid">
+                <div class="col d-grid">
                     <a class="btn btn-outline-primary" asp-controller="Home" asp-action="Index" role="button">
                         Cancel
                     </a>
