--- a/SmartStore/Views/User/Index.cshtml
+++ b/SmartStore/Views/User/Index.cshtml
@@ -49,10 +49,24 @@
                 </td>
                 <th>@user.CreatedAt.ToString("MM/dd/yyyy")</th>
                 <th>
-                    <a class="btn btn-primary btn-sm" asp-controller="Users" asp-action="Details"
+                    <a class="btn btn-primary btn-sm" asp-controller="User" asp-action="Details"
                        asp-route-id="@user.Id">Details</a>
                 </th>
             </tr>
         }
     </tbody>
 </table>
+
+<nav>
+    <ul class="pagination">
+        @for (int i = 1; i <= ViewBag.TotalPages; i++)
+        {
+            string active = "";
+            if (i == ViewBag.PageIndex) active = "active";
+
+            <li class="page-item @active">
+                <a class="page-link" asp-route-pageIndex="@i">@i</a>
+            </li>
+        }
+    </ul>
+</nav>
