--- a/SmartStore/Views/User/Details.cshtml
+++ b/SmartStore/Views/User/Details.cshtml
@@ -7,6 +7,21 @@
         <h2 class="text-center mb-3">User Details</h2>
         <hr />
 
+        @if (TempData["ErrorMessage"] != null)
+        {
+            <div class='alert alert-danger alert-dismissible fade show' role='alert'>
+                <strong>@TempData["ErrorMessage"]</strong>
+                <button type='button' class='btn-close' data-bs-dismiss='alert' aria-label='Close'></button>
+            </div>
+        }
+        else if (TempData["SuccessMessage"] != null)
+        {
+            <div class='alert alert-success alert-dismissible fade show' role='alert'>
+                <strong>@TempData["SuccessMessage"]</strong>
+                <button type='button' class='btn-close' data-bs-dismiss='alert' aria-label='Close'></button>
+            </div>
+        }
+
         <div class="row mb-2">
             <div class="col-sm-4">First Name</div>
             <div class="col-sm-8">@Model.FirstName</div>
@@ -54,6 +69,10 @@
                     }
 
                     <span class="badge rounded-pill @color">@rolesStr</span>
+
+                    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#roleModal">
+                        Edit
+                    </button>
                 }
             </div>
         </div>
@@ -68,10 +87,57 @@
         <div>
             <a class="btn btn-primary" asp-controller="User" asp-action="Index">Back</a>
 
-            <button type="button" class="btn btn-danger">
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
                 Delete
             </button>
         </div>
 
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="roleModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Edit User Role</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="get" asp-controller="User" asp-action="EditRole">
+                    <input type="hidden" value="@Model.Id" name="id" />
+                    <label>Select user role</label>
+                    <select class="form-select mb-2" name="newRole" asp-items="@ViewBag.SelectItems">
+                    </select>
+
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete User Account</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this user account?</p>
+            </div>
+            <div class="modal-footer">
+                <a class="btn btn-danger" role="button" asp-controller="User" asp-action="DeleteAccount" asp-route-id="@Model.Id">
+                    Delete
+                </a>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
     </div>
 </div>
