--- a/SmartStore/Views/Store/Details.cshtml
+++ b/SmartStore/Views/Store/Details.cshtml
@@ -9,8 +9,8 @@
     <div class="col-md-8">
         <h3 class="mb-3">@Model.Name</h3>
         <h3 class="mb-3">@(Model.Price)$</h3>
-        <button type="button" class="btn btn-warning btn-sm">
-            Add to cart <i class="bg-info bi-cart4"></i>
+        <button type="button" class="btn btn-warning btn-sm" onclick="addToCart(this, @Model.Id)">
+            Add to cart <i class="bi bi-cart4"></i>
         </button>
         <hr />
 
