--- a/SmartStore/Views/Shared/_Layout.cshtml
+++ b/SmartStore/Views/Shared/_Layout.cshtml
@@ -11,6 +11,63 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
+    <script>
+        function getShoppingCart() {
+            const cookieName = "shopping_cart";
+            let cookiesArray = document.cookie.split(';');
+
+            for (let i = 0; i < cookiesArray.length; i++) {
+                let cookie = cookiesArray[i];
+                if (cookie.includes(cookieName)) {
+                    let cookie_value = cookie.substring(cookie.indexOf("=") + 1);
+
+                    try {
+                        let cart = JSON.parse(atob(cookie_value));
+                        return getShoppingCart;
+                    }
+                    catch (exception) {
+                        break;
+                    }
+                }
+            }
+
+            return {};
+        }
+
+        function saveCart(cart) {
+            let cartStr = btoa(JSON.stringify(cart));
+
+            let d = new Date();
+            d.setDate(d.getDate() + 365);
+            let expires = d.toUTCString();
+            document.cookie = "shopping_cart=" + cartStr + ";expires=" + expires + ";path=/; SameSite=Strict; Secure";
+        }
+
+        function addToCart(button, id) {
+            let cart = getShoppingCart();
+
+            let quantity = cart[id];
+            if (isNaN(quantity)) {
+                cart[id] = 1;
+            } else {
+                cart[id] = Number(quantity) + 1;
+            }
+
+            saveCart(cart);
+            button.innerHTML = "Added <i class='bi bi-check-lg'></i>";
+
+            let cartSize = 0;
+            for (var cartItem of Object.entries(cart)) {
+                quantity = cartItem[1];
+                if (isNaN(quantity)) continue;
+
+                cartSize += Number(quantity);
+            }
+
+            document.getElementById("CartSize").innerHTML = cartSize;
+        }
+
+    </script>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container">
@@ -29,6 +86,17 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                    </ul>
+
+                    <ul class="navbar-nav me-2">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index">
+                                <i class="bi bi-cart4 text-danger h3"></i>
+                                <span id="CartSize" class="badge rounded-pill bg-danger" style="vertical-align:top">
+                                    0
+                                </span>
+                            </a>
                         </li>
                     </ul>
 
@@ -70,12 +138,12 @@
                                     </ul>
                                 </li>
                             </ul>
-                        }                       
+                        }
                         else
                         {
                             <ul class="navbar-nav">
                                 <li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
                                 </li>
                             </ul>
                         }
@@ -91,7 +159,7 @@
                             </li>
                         </ul>
                     }
-                    
+
                 </div>
             </div>
         </nav>
@@ -110,8 +178,8 @@
     }
     <footer class="border-top footer text-muted">
         <div class="container">
-           <img src="/images/icon_store.png" alt="..." width="30" class="me-2"/> 
-           &copy; 2024 - SmartStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <img src="/images/icon_store.png" alt="..." width="30" class="me-2" />
+            &copy; 2024 - SmartStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
