--- a/SmartStore/Views/Shared/_Layout.cshtml
+++ b/SmartStore/Views/Shared/_Layout.cshtml
@@ -108,6 +108,8 @@
             }
         }
 
+
+
     </script>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
@@ -159,6 +161,7 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
+                                        <li><a class="dropdown-item" asp-area="" asp-controller="AdminOrders" asp-action="Index">Orders</a></li>
                                         <li><a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Index">Users</a></li>
                                         <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="Profile">Profile</a></li>
                                         <li><hr class="dropdown-divider"></li>
